# AgentsFlow-gateway

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.html  Dockerfile  Makefile  QUICK_START.md  README.md  deploy.sh  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 305517edbd48_initial.py
app/: config.py  config_spec.md  main.py  main_spec.md  test_config.py
app/api/: utils.py
app/api/dependencies/: dependencies_spec.md  di.py  test_di.py
app/api/middleware/: auth.py  middleware_spec.md  test_auth.py
app/api/routes/: chat.py  chat_spec.md  configs.py  logs.py  logs_spec.md  policies.py  policies_spec.md  providers.py  providers_spec.md  settings.py  stats.py  stats_spec.md  test_chat.py  test_logs.py  test_policies.py  test_providers.py  test_settings.py  test_tester.py  test_webhooks.py  tester.py  tester_spec.md  ui_pages_spec.md  webhook.py  webhook_spec.md
app/api/schemas/: chat.py  common.py  (+6 more)
app/services/: chat_service.py  chat_service_spec.md  config_service.py  log_service.py  log_service_spec.md  policy_service.py  policy_service_spec.md  provider_service.py  provider_service_spec.md  test_chat_service.py  test_log_service.py  test_policy_service.py  test_tester_service.py  test_webhook_service.py  tester_service.py  tester_service_spec.md  webhook_service.py  webhook_service_spec.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
hub/: endpoints.md  endpoints_vs_spec.md
(+76 files in other folders)
